--- a/CodeIgniter/public/CSS/curriculum.css
+++ b/CodeIgniter/public/CSS/curriculum.css
@@ -326,7 +326,7 @@ h2 {
 }
 
 .color-preview {
-  width: 50px; 
+  width: 150px; 
   height: 20px;
   border: 0.2px solid #000;
   border-radius: 5px;
@@ -342,3 +342,8 @@ h2 {
 #contact:hover {
   color: #241D21;
 }
+
+.error {
+  color: red;
+}
+
